# wealthfolio

./: .tool-versions  Dockerfile  README.md  build-and-run.sh  build.sh  package-lock.json  package.json  pnpm-lock.yaml  run.sh  tailwind.config.js
.kiro/specs/android-mobile-conversion/: design.md  requirements.md  tasks.md
.kiro/specs/holdings-percentage-column/: design.md  requirements.md  tasks.md
projects/Activity_export/: PRD-activity-export-to-csv.md  design.md  tasks.md
src/: bindings.ts  vite-env.d.ts
src-core/src/activities/: activities_model.rs  activities_repository.rs
src-tauri/: Cargo.toml
src-tauri/capabilities/: desktop.json
src-tauri/src/: main.rs
src-tauri/src/commands/: activity.rs  mod.rs
src/adapters/: http.ts  index.ts
src/clients/: accountClient.ts  activityClient.ts  assetClient.ts  goalClient.ts  limitsClient.ts  marketDataClient.ts  portfolioClient.ts  settingsClient.ts
src/commands/: account.ts  activity.ts  asset.ts  contribution-limits.ts  exchange-rates.ts  goal.ts  market-data.ts  portfolio.ts  settings.ts
src/components/: history-chart.tsx  icons.tsx  performance-chart.tsx
src/components/ui/: calendar.tsx
src/config/: index.ts
src/lib/: constants.ts  export-utils.ts  portfolio-percentage-utils.test.ts  portfolio-percentage-utils.ts  types.ts  utils.ts
src/pages/account/: account-metrics.tsx  account-page.tsx  use-balance-update.ts
src/pages/activity/: activity-page.tsx
src/pages/dashboard/: dashboard-page.tsx
web-server/: Cargo.toml
web-server/src/: main.rs  router.rs
(+3 files in other folders)
